# fastapi-async-architecture

./: Dockerfile  README.md  pyproject.toml  pytest.ini  test_utils.py
app/: main.py
app/core/: config.py  container.py  database.py  exceptions.py
app/models/: base_model.py  post.py  tag.py  user.py
app/repositories/: base_repository.py  post_repository.py  tag_repository.py  user_repository.py
app/routers/: async_routers.py  post_router.py  routers.py  tag_router.py  user_router.py
app/schemas/: base_schema.py  post_schema.py  tag_schema.py  user_schema.py
app/services/: base_service.py  post_service.py  tag_service.py  user_service.py
sql/: 202408270000_create_database copy.sql  202408270001_create_tables.sql  202408270002_insert_data.sql
tests/: conftest.py  test_utils.py
tests/integration_tests/: test_client.py  test_my.py  test_post_router.py  test_tag_router.py  test_user_router.py  tests_user_router.py
tests/unittests/repositories/: test_user_repository.py
