[tool.poetry]
name = "onboarding"
version = "0.1.0"
description = "now-onboarding"
authors = ["kimjy"]
license = "none"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.2.2"
fastapi = "^0.112.2"
uvicorn = "^0.30.6"
sqlalchemy = "^2.0.32"
dependency-injector = "^4.41.0"
asyncmy = "^0.2.9"
pymysql = "^1.1.1"
aiomysql = "^0.2.0"
greenlet = "^3.0.3"
black = "^24.8.0"
httpx = "^0.27.2"
pydantic-settings = "^2.4.0"
pytest-asyncio = "^0.24.0"
pytest-cov = "^5.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
